docs/styles/style.css
/* ... */
/* FEATURES */

#features {
  position: relative;
  max-width: 100rem;
  margin: 10vw auto 0;
}

.features-gif {
  margin-bottom: -32rem;
  position: absolute;
  top: 79vw;
  right: -3rem;
  z-index: -1;
}

@media only screen and (max-width: 30rem) {
  .features-gif {
    width: 70vw;
    top: 62vw;
  }
}

@media only screen and (max-width: 40rem) {
  .features-gif {
    width: 50vw;
    top: 20vw;
  }
}

@media only screen and (max-width: 50rem) {
  .features-gif {
    top: 80vw;
  }
}

@media only screen and (max-width: 60rem) {
  .features-gif {
    top: 88vw;
  }
}

@media only screen and (min-width: 90rem) {
  .features-gif {
    width: 40vw;
    top: 74vw;
  }
}

@media only screen and (min-width: 100rem) {
  .features-gif {
    top: 74vw;
  }
}

@media only screen and (min-width: 110rem) {
  .features-gif {
    top: 67vw;
  }
}

@media only screen and (min-width: 120rem) {
  .features-gif {
    top: 62vw;
  }
}

@media only screen and (min-width: 140rem) {
  .features-gif {
    top: 55vw;
  }
}

#features h1.druk {
  font-size: 14vw;
  padding: 0.5rem 0;
  white-space: nowrap;
  background: linear-gradient(
    269.73deg,
    #baa700 63%,
    #00a907 69%,
    #00a907 80%,
    #baa700 93%
  );
  color: #000;
  mix-blend-mode: exclusion;
  background-clip: text;
  text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-top: 8rem;
}

@media only screen and (max-width: 30rem) {
  #features h1.druk {
    font-size: 28vw;
    line-height: 80%;
    padding-top: 5rem;
    margin-top: 6rem;
    white-space: normal;
  }
}

@media only screen and (min-width: 70rem) {
  #features h1.druk {
    font-size: 11.5vw;
  }
}

@media only screen and (min-width: 90rem) {
  #features h1.druk {
    font-size: min(280px, 10.5vw);
  }
}

.container.attributes {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-items: center;
}

.attribute {
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin: 0 0 10rem;
  width: 90vw;
}

.attribute:last-child {
  margin-bottom: 0;
}

.attribute:nth-child(2n) {
  flex-direction: row-reverse;
}

@media only screen and (max-width: 60rem) {
  .attribute,
  .attribute:nth-child(2n) {
    flex-direction: column-reverse;
  }
}

.attribute .screenshot {
  width: 41vw;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: right;
  align-self: stretch;
  display: flex;
  place-content: center;
}

.attribute .content {
  text-align: left;
  margin: 2.5rem 2.5rem 2.5rem 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--color-background);
  border-radius: 1rem;
  padding: 5.25rem;
  width: 32rem;
}

@media only screen and (max-width: 60rem) {
  .attribute {
    flex-direction: column-reverse;
  }

  .attribute .content {
    margin: 0;
  }

  .attribute .content {
    width: auto;
  }
}

@media only screen and (max-width: 80rem) {
  .attribute .content {
    padding: 3rem;
  }
}

.attribute h4 {
  font-size: 3rem;
  line-height: 3rem;
  font-weight: 700;
  letter-spacing: -1.125px;
  padding-bottom: 1.5rem;
  color: var(--color-foreground);
}

@media only screen and (max-width: 30rem) {
  .attribute h4 {
    font-size: 2rem;
    line-height: 1.75rem;
  }

  .attribute p {
    font-size: 1rem;
  }

  .attribute {
    width: 80vw;
  }

  .attribute > p {
    font-size: 1rem;
    padding-bottom: 1rem;
    align-items: flex-start;
  }
}

.attribute p svg {
  margin-right: 1rem;
  width: 2rem;
  height: 2rem;
}

.attribute p svg path {
  fill: var(--color-foreground);
}

.attribute p:first-of-type {
  font-size: 1.5rem;
  line-height: 1.5;
  color: var(--color-foreground-level-6);
  max-width: 26rem;
  padding: 1.25rem 0 2.5rem;
}

@media only screen and (max-width: 80rem) {
  .attribute p:first-of-type {
    padding: 0 0 1.25rem;
    font-size: 1.25rem;
  }
}

.attribute p:nth-child(n + 3) {
  padding-bottom: 2rem;
  display: flex;
  align-items: center;
}

@media only screen and (max-width: 80rem) {
  .attribute p:nth-child(n + 3) {
    padding-bottom: 1rem;
  }
}

.attribute p:nth-child(n + 3):last-child {
  padding: 0;
}

@media only screen and (max-width: 64rem) {
  .container.attributes {
    grid-template-columns: 1fr;
  }
}

/* SPECIFIC FEATURE STYLES */

.attribute:nth-child(1) .screenshot img {
  width: 75%;
  align-self: center;
}

@media only screen and (max-width: 60rem) {
  .attribute .screenshot,
  .attribute:nth-child(1) .screenshot img {
    width: 94%;
    margin-bottom: -4.5rem;
    z-index: -1;
    margin-right: -5.3vw;
  }
}

.attribute:nth-child(2) .screenshot {
  background-image: url(../img/ui/timeline.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: right;
  align-self: stretch;
  display: flex;
  place-content: center;
}

@media only screen and (max-width: 60rem) {
  .attribute:nth-child(2) .screenshot {
    background-position: center;
    height: 70vw;
    width: 100%;
  }
}

.attribute:nth-child(2) .screenshot img {
  width: 45%;
  align-self: center;
  margin-right: -6vw;
}

.attribute:nth-child(2n) .content {
  margin: 2.5rem 0 2.5rem 0;
}

.attribute:nth-child(3) .screenshot img {
  margin-right: -35vw;
  width: 180%;
  align-self: center;
}

@media only screen and (max-width: 60rem) {
  .attribute:nth-child(3) .screenshot img {
    width: 97%;
    margin-bottom: 3rem;
    z-index: -1;
    margin-right: -5.4vw;
  }
}

.attribute:nth-child(4) .screenshot {
  background-image: url(../img/ui/outgoing-support.png);
  background-position: 0rem 7rem;
  background-size: 90%;
}

.attribute:nth-child(4) .screenshot img {
  width: 45%;
  align-self: start;
  margin-left: 16rem;
  margin-top: 1rem;
}
/* ... */

